--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
     "nuxt": "3.0.0-rc.1"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.9",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-link-http": "^1.5.17",
     "graphql": "^16.4.0",
-    "graphql-tag": "^2.12.6",
-    "nuxt-graphql-client": "^0.0.24",
-    "vue-apollo": "^3.1.0"
+    "nuxt-graphql-client": "^0.0.24"
   }
 }
