--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "sass": "^1.51.0"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "graphql": "^16.4.0",
     "nuxt-graphql-client": "^0.0.24"
   }
