--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.1.4",
     "@nuxtjs/tailwindcss": "^5.3.2",
-    "nuxt": "3.0.0-rc.8",
+    "nuxt": "^3.0.0-rc.9",
     "sass": "^1.54.5"
   },
   "dependencies": {
