--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.4",
     "graphql": "^16.6.0",
-    "nuxt-graphql-client": "^0.1.12"
+    "node-html-parser": "^6.1.1",
+    "nuxt-graphql-client": "^0.1.12",
+    "typescript": "^4.8.4"
   }
 }
