--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "version": "0.6.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.4",
+    "@types/node": "18.8.0",
     "graphql": "^16.6.0",
     "node-html-parser": "^6.1.1",
     "nuxt-graphql-client": "^0.1.12",
