--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.6.0",
+  "version": "0.6.5",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "18.8.0",
     "graphql": "^16.6.0",
+    "highlight.js": "^11.6.0",
     "node-html-parser": "^6.1.1",
     "nuxt-graphql-client": "^0.1.12",
     "typescript": "^4.8.4"
