--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/tailwindcss": "^5.3.2",
-    "nuxt": "^3.0.0-rc.9",
-    "sass": "^1.54.5"
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "nuxt": "^3.0.0",
+    "sass": "^1.56.1"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.4",
-    "@types/node": "18.8.0",
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "18.11.10",
     "graphql": "^16.6.0",
     "highlight.js": "^11.6.0",
-    "node-html-parser": "^6.1.1",
-    "nuxt-graphql-client": "^0.1.12",
-    "typescript": "^4.8.4"
+    "node-html-parser": "^6.1.4",
+    "nuxt-graphql-client": "^0.2.17",
+    "typescript": "^4.9.3"
   }
 }
