--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - main
 
-env:
-  API_URL: ${{ secrets.API_URL }}
-  GQL_HOST: ${{ secrets.GQL_HOST }}
-  URL: ${{ secrets.URL }}
-
 jobs:
   ci:
     runs-on: ${{ matrix.os }}
@@ -29,8 +24,12 @@ jobs:
 
       - name: Building the Docker Image 🐳🚧
         id: docker_build
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v3.3.0
         with:
+          build-args: |
+            api_url: ${{ secrets.API_URL }}
+            gql_host: ${{ secrets.GQL_HOST }}
+            url: ${{ secrets.URL }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/overlord-front:latest
 
