--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,20 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+      - name: Creating env file 🔑
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          fail_on_empty: true
+          envkey_API_URL: ${{ secrets.API_URL }}
+          envkey_GQL_HOST: ${{ secrets.GQL_HOST }}
+          envkey_URL: ${{ secrets.URL }}
+
+      - run: pwd && ls -la
+
       - name: Building the Docker Image 🐳🚧
         id: docker_build
-        uses: docker/build-push-action@v3.3.0
+        uses: docker/build-push-action@v3
         with:
-          build-args: |
-            api_url: ${{ secrets.API_URL }}
-            gql_host: ${{ secrets.GQL_HOST }}
-            url: ${{ secrets.URL }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/overlord-front:latest
 
