--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,21 +22,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Creating env file 🔑
-        uses: SpicyPizza/create-envfile@v1.3
-        with:
-          fail_on_empty: true
-          envkey_API_URL: ${{ secrets.API_URL }}
-          envkey_GQL_HOST: ${{ secrets.GQL_HOST }}
-          envkey_URL: ${{ secrets.URL }}
-
-      - run: pwd && ls -la
-
       - name: Building the Docker Image 🐳🚧
         id: docker_build
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v3.3.0
         with:
           push: true
+          build-args: |
+            API_URL=${{ secrets.API_URL }}
+            GQL_HOST=${{ secrets.GQL_HOST }}
+            URL=${{ secrets.URL }}
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/overlord-front:latest
 
       - name: Deploying 🚚
