--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.0.0-27907872.f4dd19d",
-    "@nuxt/types": "^2.15.8",
+    "@nuxt/image-edge": "^1.0.0-27913696.5d122a3",
+    "@nuxt/types": "^2.16.0",
     "@nuxtjs/apollo": "^5.0.0-alpha.4",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.3.0",
-    "nuxt": "^3.1.1",
-    "sass": "^1.56.1"
+    "@nuxtjs/i18n": "^8.0.0-beta.9",
+    "@nuxtjs/tailwindcss": "^6.3.1",
+    "nuxt": "^3.1.2",
+    "sass": "^1.58.0"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.8",
