--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -8,17 +8,18 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "^1.0.0-27907872.f4dd19d",
-    "@nuxt/types": "^2.15.8",
+    "@nuxt/image-edge": "^1.0.0-27913696.5d122a3",
+    "@nuxt/types": "^2.16.0",
     "@nuxtjs/apollo": "^5.0.0-alpha.4",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.3.0",
-    "nuxt": "^3.1.1",
-    "sass": "^1.56.1"
+    "@nuxtjs/i18n": "^8.0.0-beta.9",
+    "@nuxtjs/tailwindcss": "^6.3.1",
+    "nuxt": "^3.2.0",
+    "sass": "^1.58.0"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "18.11.18",
+    "@types/node": "18.13.0",
     "graphql": "^16.6.0",
     "highlight.js": "^11.7.0",
     "node-html-parser": "^6.1.4",
