--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "1.1.1",
+  "version": "1.1.2",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -8,18 +8,22 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@hcaptcha/types": "^1.0.3",
     "@nuxt/image-edge": "^1.0.0-27913696.5d122a3",
     "@nuxt/types": "^2.16.0",
     "@nuxtjs/apollo": "^5.0.0-alpha.4",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/i18n": "^8.0.0-beta.9",
-    "@nuxtjs/tailwindcss": "^6.4.0",
-    "nuxt": "^3.2.0",
-    "sass": "^1.58.0"
+    "@nuxtjs/tailwindcss": "^6.4.1",
+    "nuxt": "^3.2.2",
+    "sass": "^1.58.3"
   },
   "dependencies": {
+    "@hcaptcha/vue3-hcaptcha": "^1.2.1",
     "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "18.13.0",
+    "@types/node": "18.14.0",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "graphql": "^16.6.0",
     "highlight.js": "^11.7.0",
     "node-html-parser": "^6.1.4",
