--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   },
   "devDependencies": {
     "@hcaptcha/types": "^1.0.3",
-    "@nuxt/image-edge": "^1.0.0-27913696.5d122a3",
-    "@nuxt/types": "^2.16.0",
-    "@nuxtjs/apollo": "^5.0.0-alpha.4",
+    "@nuxt/image-edge": "^1.0.0-28059208.2abef1b",
+    "@nuxt/types": "^2.16.3",
+    "@nuxtjs/apollo": "^5.0.0-alpha.6",
     "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/i18n": "^8.0.0-beta.9",
-    "@nuxtjs/tailwindcss": "^6.4.1",
-    "nuxt": "^3.2.2",
-    "sass": "^1.58.3"
+    "@nuxtjs/i18n": "^7.3.1",
+    "@nuxtjs/tailwindcss": "^6.6.7",
+    "nuxt": "^3.4.3",
+    "sass": "^1.62.1"
   },
   "dependencies": {
     "@hcaptcha/vue3-hcaptcha": "^1.2.1",
     "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "18.14.0",
-    "@vuelidate/core": "^2.0.0",
-    "@vuelidate/validators": "^2.0.0",
+    "@types/node": "20.1.0",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "graphql": "^16.6.0",
-    "highlight.js": "^11.7.0",
-    "node-html-parser": "^6.1.4",
-    "typescript": "^4.9.3"
+    "highlight.js": "^11.8.0",
+    "node-html-parser": "^6.1.5",
+    "typescript": "^5.0.4"
   }
 }
