--- a/package.json
+++ b/package.json
@@ -1,32 +1,31 @@
 {
   "private": true,
-  "version": "1.1.2",
+  "version": "2.0.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@hcaptcha/types": "^1.0.3",
-    "@nuxt/image-edge": "^1.0.0-28059208.2abef1b",
-    "@nuxt/types": "^2.16.3",
-    "@nuxtjs/apollo": "^5.0.0-alpha.6",
-    "@nuxtjs/color-mode": "^3.2.0",
-    "@nuxtjs/i18n": "^7.3.1",
-    "@nuxtjs/tailwindcss": "^6.6.7",
-    "nuxt": "^3.4.3",
-    "sass": "^1.62.1"
+    "sass": "^1.76.0",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.6.3"
   },
   "dependencies": {
-    "@hcaptcha/vue3-hcaptcha": "^1.2.1",
-    "@tailwindcss/typography": "^0.5.8",
-    "@types/node": "20.1.0",
-    "@vuelidate/core": "^2.0.2",
-    "@vuelidate/validators": "^2.0.2",
-    "graphql": "^16.6.0",
-    "highlight.js": "^11.8.0",
-    "node-html-parser": "^6.1.5",
-    "typescript": "^5.0.4"
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
+    "@mdi/font": "^7.4.47",
+    "@types/node": "20.12.8",
+    "@vee-validate/nuxt": "^4.12.6",
+    "@vueuse/core": "^10.9.0",
+    "@vueuse/nuxt": "^10.9.0",
+    "highlight.js": "^11.9.0",
+    "nuxt": "^3.11.2",
+    "nuxt-directus": "^5.6.1",
+    "typescript": "^5.4.5",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   }
 }
