--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@mdi/font": "^7.4.47",
     "@types/node": "20.12.8",
+    "@vee-validate/i18n": "^4.12.6",
     "@vee-validate/nuxt": "^4.12.6",
+    "@vee-validate/rules": "^4.12.6",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "highlight.js": "^11.9.0",
