--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "private": true,
-  "version": "2.0.0",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@hcaptcha/types": "^1.0.3",
-    "sass": "^1.76.0",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vuetify": "^3.6.3"
-  },
-  "dependencies": {
-    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
-    "@mdi/font": "^7.4.47",
-    "@types/node": "20.12.8",
-    "@vee-validate/i18n": "^4.12.7",
-    "@vee-validate/nuxt": "^4.12.7",
-    "@vee-validate/rules": "^4.12.7",
-    "@vueuse/core": "^10.9.0",
-    "@vueuse/nuxt": "^10.9.0",
-    "dayjs-nuxt": "^2.1.9",
-    "highlight.js": "^11.9.0",
-    "nuxt": "^3.11.2",
-    "nuxt-directus": "^5.6.1",
-    "typescript": "^5.4.5",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
-  }
+    "version": "2.0.0",
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
+    "dependencies": {
+        "@hcaptcha/vue3-hcaptcha": "^1.3.0",
+        "@mdi/font": "^7.4.47",
+        "@types/node": "20.12.8",
+        "@vee-validate/i18n": "^4.12.7",
+        "@vee-validate/nuxt": "^4.12.7",
+        "@vee-validate/rules": "^4.12.7",
+        "@vueuse/core": "^10.9.0",
+        "@vueuse/nuxt": "^10.9.0",
+        "dayjs-nuxt": "^2.1.9",
+        "highlight.js": "^11.9.0",
+        "nuxt": "^3.11.2",
+        "nuxt-directus": "^5.6.1",
+        "typescript": "^5.4.5",
+        "vue": "^3.4.21",
+        "vue-router": "^4.3.0"
+    },
+    "devDependencies": {
+        "@antfu/eslint-config": "^2.17.0",
+        "@hcaptcha/types": "^1.0.3",
+        "eslint": "^9.2.0",
+        "eslint-plugin-format": "^0.1.1",
+        "sass": "^1.76.0",
+        "vite-plugin-vuetify": "^2.0.3",
+        "vuetify": "^3.6.3"
+    }
 }
