--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-node_modules
-*.log*
+# Nuxt dev/build outputs
+.output
+.data
 .nuxt
 .nitro
-.idea/
 .cache
-.output
-gql/schema.graphql
-.env
+dist
+
+# Node dependencies
+node_modules
+
+# Logs
+logs
+*.log
+
+# Misc
 .DS_Store
-gql/*
+.fleet
+.idea
+
+# Local env files
+.env
+.env.*
+!.env.example
