--- a/package.json
+++ b/package.json
@@ -1,39 +1,26 @@
 {
-    "version": "2.0.0",
-    "private": true,
-    "scripts": {
-        "build": "nuxt build",
-        "dev": "nuxt dev",
-        "generate": "nuxt generate",
-        "preview": "nuxt preview",
-        "postinstall": "nuxt prepare",
-        "lint": "eslint .",
-        "lint:fix": "eslint . --fix"
-    },
-    "dependencies": {
-        "@hcaptcha/vue3-hcaptcha": "^1.3.0",
-        "@mdi/font": "^7.4.47",
-        "@types/node": "20.12.8",
-        "@vee-validate/i18n": "^4.12.7",
-        "@vee-validate/nuxt": "^4.12.7",
-        "@vee-validate/rules": "^4.12.7",
-        "@vueuse/core": "^10.9.0",
-        "@vueuse/nuxt": "^10.9.0",
-        "dayjs-nuxt": "^2.1.9",
-        "highlight.js": "^11.9.0",
-        "nuxt": "^3.11.2",
-        "nuxt-directus": "^5.6.1",
-        "typescript": "^5.4.5",
-        "vue": "^3.4.21",
-        "vue-router": "^4.3.0"
-    },
-    "devDependencies": {
-        "@antfu/eslint-config": "^2.17.0",
-        "@hcaptcha/types": "^1.0.3",
-        "eslint": "^9.2.0",
-        "eslint-plugin-format": "^0.1.1",
-        "sass": "^1.76.0",
-        "vite-plugin-vuetify": "^2.0.3",
-        "vuetify": "^3.6.3"
-    }
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "dependencies": {
+    "@nuxt/content": "3.6.2",
+    "@nuxt/eslint": "1.5.2",
+    "@nuxt/image": "1.10.0",
+    "@vueuse/nuxt": "13.5.0",
+    "better-sqlite3": "^12.2.0",
+    "dayjs-nuxt": "2.1.11",
+    "eslint": "^9.0.0",
+    "nuxt": "^3.17.6",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
+    "vuetify-nuxt-module": "0.18.7"
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
