--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "better-sqlite3": "^12.2.0",
     "dayjs-nuxt": "2.1.11",
     "eslint": "^9.0.0",
+    "js-yaml": "^4.1.0",
     "nuxt": "^3.17.6",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vuetify-nuxt-module": "0.18.7"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.9"
+  }
 }
