Feature/nuxt content (#9)
* Initial install + packages

* Added more configs to nuxt content

* Upgraded packages and added js-yaml

* Added personal resume in yml, output is in json

* Added health check

* Added eslint

* Added default pages, started working on front page

* Ran yarn lint and fixed package json's name

* Added animations

* Refactored color usage

* Added about, fixed color on hero and header

* Started handling articles (with fake data)

* Landing page is almost done wuhu

* Added articles, nothing in them yet

* Landing page is done

* Moved icons to their directory

---------

Co-authored-by: Joseph Levarato <joseph@cube.home>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,5 @@
 {
-    // Enable the ESlint flat config support
-    // (remove this if your ESLint extension above v3.0.5)
-    "eslint.experimental.useFlatConfig": true,
-
     // Disable the default formatter, use eslint instead
-    "prettier.enable": false,
     "editor.formatOnSave": false,
 
     // Auto fix
@@ -30,18 +25,12 @@
     // Enable eslint for all supported languages
     "eslint.validate": [
         "javascript",
-        "javascriptreact",
         "typescript",
-        "typescriptreact",
         "vue",
         "html",
         "markdown",
         "json",
         "jsonc",
-        "yaml",
-        "toml",
-        "gql",
-        "graphql",
-        "astro"
+        "yaml"
     ]
 }
