--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "eslint": "^9.0.0",
         "js-yaml": "^4.1.0",
         "nuxt": "^4.0.0",
+        "remark-reading-time": "^2.0.2",
         "vue": "^3.5.17",
         "vue-router": "^4.5.1",
         "vuetify-nuxt-module": "0.18.7"
