--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "lint:fix": "eslint --fix"
     },
     "dependencies": {
-        "@nuxt/content": "3.6.2",
+        "@nuxt/content": "^3.6.3",
         "@nuxt/eslint": "1.5.2",
         "@nuxt/image": "1.10.0",
         "@vueuse/nuxt": "13.5.0",
