--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "devDependencies": {
         "@antfu/eslint-config": "^4.16.2",
+        "@nuxtjs/seo": "^3.1.0",
         "@types/js-yaml": "^4.0.9",
         "eslint-plugin-format": "^1.0.1"
     }
